--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@edx/edx-bootstrap": "^0.4.3",
-    "@edx/frontend-auth": "1.1.0",
+    "@edx/frontend-auth": "^1.2.1",
     "@edx/paragon": "^3.7.1",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
