--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "html-webpack-plugin": "^3.0.3",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
+    "image-webpack-loader": "^4.2.0",
     "jest": "^22.4.0",
     "node-sass": "^4.7.2",
     "react-dev-utils": "^5.0.0",
