--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "es-check": "^2.0.2",
     "eslint-config-edx": "^4.0.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fetch-mock": "^6.3.0",
     "file-loader": "^1.1.9",
     "html-webpack-harddisk-plugin": "^0.2.0",
@@ -71,6 +70,7 @@
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^4.2.0",
     "jest": "^22.4.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.7.2",
     "react-dev-utils": "^5.0.0",
     "react-test-renderer": "^16.2.0",
@@ -79,8 +79,8 @@
     "semantic-release": "^15.10.7",
     "style-loader": "^0.20.2",
     "travis-deploy-once": "^5.0.9",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.0",
     "webpack-merge": "^4.1.1"
   },
