--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@edx/edx-bootstrap": "^0.4.3",
     "@edx/frontend-auth": "^1.2.1",
     "@edx/paragon": "^3.7.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
     "email-prop-type": "^1.1.5",
