--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@edx/frontend-auth": "^1.3.0",
     "@edx/frontend-component-footer": "^1.0.0",
     "@edx/paragon": "^3.8.3",
+    "@redux-beacon/segment": "^1.0.0",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "email-prop-type": "^1.1.7",
@@ -43,6 +44,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.7",
+    "redux-beacon": "^2.0.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "whatwg-fetch": "^2.0.4"
