--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "query-string": "^5.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-intl": "^2.9.0",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
