--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "semantic-release": "semantic-release",
     "start": "NODE_ENV=development BABEL_ENV=development node_modules/.bin/webpack-dev-server --config=config/webpack.dev.config.js --progress",
     "test": "jest --coverage --passWithNoTests",
+    "watch-tests": "jest --watch",
     "travis-deploy-once": "travis-deploy-once"
   },
   "author": "edX",
