--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@edx/edx-bootstrap": "^0.4.3",
     "@edx/frontend-auth": "^4.0.0",
     "@edx/frontend-component-footer": "^4.1.4",
-    "@edx/paragon": "^3.8.3",
+    "@edx/paragon": "^4.2.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@redux-beacon/segment": "^1.0.0",
     "babel-polyfill": "^6.26.0",
