--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,10 @@
     "jsx-a11y/anchor-is-valid": [ "error", {
       "components": [ "Link" ],
       "specialLink": [ "to" ]
-    }]
+    }],
+    // https://github.com/yannickcr/eslint-plugin-react/issues/1754#issuecomment-378838053
+    // tl;dr: this rule is no longer going to cause any user-facing visual weirdness, its original motivation
+    "react/no-did-mount-set-state": "off"
   },
   "env": {
     "jest": true
