--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: node_js
-node_js:
-  - lts/*
-cache:
-  directories:
-    - "~/.npm"
+node_js: 12
 notifications:
   email:
     recipients:
@@ -15,7 +11,6 @@ notifications:
   webhooks: https://www.travisbuddy.com/
   on_success: never
 before_install:
-  - npm install -g npm@latest
   - npm install -g greenkeeper-lockfile@1.14.0
 install:
   - npm ci
