--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build": "fedx-scripts webpack",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "is-es5": "es-check es5 ./dist/*.js",
-    "lint": "eslint --ext .js --ext .jsx .",
-    "precommit": "npm run lint",
+    "lint": "fedx-scripts eslint --ext .jsx,.js src/",
+    "lint-fix": "fedx-scripts eslint --fix --ext .jsx,.js src/",
+    "prepush": "npm run lint",
     "semantic-release": "semantic-release",
     "start": "fedx-scripts webpack-dev-server --progress",
     "test": "TZ=GMT fedx-scripts jest --coverage --passWithNoTests",
@@ -25,7 +26,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@edx/frontend-auth": "^4.0.0",
     "@edx/frontend-component-footer": "10.0.11",
     "@edx/frontend-platform": "1.5.0",
     "@edx/paragon": "10.0.1",
@@ -63,9 +63,8 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "es-check": "^2.3.0",
-    "eslint-config-edx": "^4.0.4",
     "fetch-mock": "^6.5.2",
-    "husky": "^0.14.3",
+    "husky": "2.7.0",
     "identity-obj-proxy": "^3.0.0",
     "react-dev-utils": "^5.0.3",
     "react-test-renderer": "^16.10.1",
