--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.5",
     "@redux-beacon/segment": "^1.0.0",
+    "core-js": "3.6.5",
     "classnames": "^2.2.6",
     "email-prop-type": "^1.1.7",
     "font-awesome": "4.7.0",
