--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@edx/frontend-component-footer": "10.0.11",
-    "@edx/frontend-platform": "1.6.1",
+    "@edx/frontend-component-footer": "10.1.0",
+    "@edx/frontend-platform": "^1.8.0",
     "@edx/paragon": "10.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -58,7 +58,7 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "@edx/frontend-build": "5.5.0",
+    "@edx/frontend-build": "^5.5.1",
     "axios": "0.19.2",
     "axios-mock-adapter": "^1.17.0",
     "codecov": "^3.6.1",
