--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@edx/frontend-component-footer": "10.1.0",
+    "@edx/brand": "npm:@edx/brand-edx.org@^1.3.2",
+    "@edx/frontend-component-footer": "10.1.1",
     "@edx/frontend-platform": "^1.8.0",
-    "@edx/paragon": "10.0.1",
+    "@edx/paragon": "12.4.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
@@ -58,7 +59,7 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "@edx/frontend-build": "^5.5.1",
+    "@edx/frontend-build": "5.5.2",
     "axios": "0.19.2",
     "axios-mock-adapter": "^1.17.0",
     "codecov": "^3.6.1",
