--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ BASE_URL=null,
 LMS_BASE_URL=null,
 LOGIN_URL=null,
 LOGOUT_URL=null,
+LOGO_DESTINATION=null,
 CSRF_TOKEN_API_PATH=null,
 REFRESH_ACCESS_TOKEN_ENDPOINT=null,
 DATA_API_BASE_URL=null,
