--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,12 @@ on:
       - "**"
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        node: [12, 14, 16]
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -18,7 +22,7 @@ jobs:
     - name: Setup Nodejs
       uses: actions/setup-node@v1
       with:
-        node-version: 12
+        node-version: ${{ matrix.node }}
 
     - name: Install dependencies
       run: npm ci
