--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         node: [16]
+        npm: [8.5.x]
 
     steps:
     - name: Checkout
@@ -23,7 +24,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node }}
-
+    - run: npm install -g npm@${{ matrix.npm }}
     - name: Install dependencies
       run: npm ci
 
