--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-edx.org@^1.3.2",
-    "@edx/frontend-component-footer": "10.2.1",
-    "@edx/frontend-component-header": "2.4.5",
+    "@edx/frontend-component-footer": "^11.1.1",
+    "@edx/frontend-component-header": "^3.1.1",
     "@edx/frontend-platform": "2.3.0",
     "@edx/paragon": "19.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
