--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "@edx/frontend-build": "9.1.1",
+    "@edx/frontend-build": "^12.0.0",
     "axios": "0.21.1",
     "axios-mock-adapter": "^1.17.0",
     "codecov": "^3.6.1",
