--- a/package.json
+++ b/package.json
@@ -84,5 +84,8 @@
     "reactifex": "1.1.1",
     "redux-mock-store": "^1.5.3",
     "semantic-release": "^17.2.3"
+  },
+    "peerDependencies": {
+    "bootstrap": "4.6.1" 
   }
 }
