--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "access": "public"
   },
   "browserslist": [
-    "last 2 versions",
-    "not ie > 0",
-    "not ie_mob > 0"
+    "extends @edx/browserslist-config"
   ],
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-edx.org@^1.3.2",
@@ -69,6 +67,7 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
+    "@edx/browserslist-config": "^1.1.1",
     "@edx/frontend-build": "^12.4.15",
     "axios": "0.21.2",
     "axios-mock-adapter": "^1.17.0",
