--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@edx/frontend-component-header": "^3.1.1",
     "@edx/frontend-platform": "2.5.0",
     "@edx/paragon": "^19.25.4",
+    "@edx/reactifex": "^2.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
