--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "history": "4.10.1",
     "prop-types": "15.8.1",
     "query-string": "6.13.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.1.1",
     "react-router": "5.2.0",
@@ -68,17 +68,17 @@
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
     "@edx/frontend-build": "12.8.27",
-    "@testing-library/react": "^12.1.0",
+    "@testing-library/react": "12.1.5",
     "axios": "0.21.2",
     "axios-mock-adapter": "^1.17.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
     "es-check": "^2.3.0",
     "fetch-mock": "^6.5.2",
     "husky": "2.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "react-dev-utils": "^12.0.1",
-    "react-test-renderer": "^16.10.1",
+    "react-test-renderer": "17.0.2",
     "reactifex": "1.1.1",
     "redux-mock-store": "^1.5.3",
     "semantic-release": "^19.0.3"
