--- a/package.json
+++ b/package.json
@@ -82,6 +82,6 @@
     "reactifex": "1.1.1",
     "redux-mock-store": "^1.5.3",
     "semantic-release": "^19.0.3",
-    "@edx/react-unit-test-utils": "^1.3.0"
+    "@edx/react-unit-test-utils": "1.5.3"
   }
 }
