--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-test-renderer": "^16.10.1",
     "reactifex": "1.1.1",
     "redux-mock-store": "^1.5.3",
-    "semantic-release": "^19.0.3"
+    "semantic-release": "^19.0.3",
+    "@edx/react-unit-test-utils": "^1.3.0"
   }
 }
