--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@edx/frontend-platform": "^4.2.0",
     "@edx/paragon": "^20.20.0",
     "@edx/reactifex": "^2.1.1",
+    "@edx/react-unit-test-utils": "1.5.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
