--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-build": "12.9.3",
     "@testing-library/react": "12.1.5",
     "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
+    "@edx/frontend-build": "12.9.0-alpha.6",
     "axios": "0.21.2",
     "axios-mock-adapter": "^1.17.0",
     "es-check": "^2.3.0",
