feat: bumped frontend-platform to v6

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@^1.2.0",
-    "@edx/frontend-component-footer": "12.2.0",
-    "@edx/frontend-component-header": "4.6.0",
-    "@edx/frontend-platform": "5.0.0",
-    "@edx/paragon": "20.45.0",
+    "@edx/frontend-component-footer": "12.5.0",
+    "@edx/frontend-component-header": "4.8.0",
+    "@edx/frontend-platform": "6.0.2",
+    "@edx/paragon": "^21.5.0",
     "@edx/react-unit-test-utils": "1.7.0",
     "@edx/reactifex": "^2.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
@@ -68,7 +68,7 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-build": "13.0.1",
+    "@edx/frontend-build": "13.0.3",
     "@testing-library/react": "12.1.5",
     "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
     "axios": "0.21.2",
