--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@^1.2.2",
-    "@edx/frontend-component-footer": "12.2.0",
-    "@edx/frontend-component-header": "4.6.0",
-    "@edx/frontend-platform": "5.5.4",
-    "@edx/paragon": "20.45.0",
+    "@edx/frontend-component-footer": "12.5.0",
+    "@edx/frontend-component-header": "4.8.0",
+    "@edx/frontend-platform": "6.0.2",
+    "@edx/paragon": "^21.5.0",
     "@edx/react-unit-test-utils": "1.7.0",
     "@edx/reactifex": "^2.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
