--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@ ACCESS_TOKEN_COOKIE_NAME=''
 LANGUAGE_PREFERENCE_COOKIE_NAME=''
 NEW_RELIC_APP_ID=''
 NEW_RELIC_LICENSE_KEY=''
+ACCOUNT_SETTINGS_URL=''
+ACCOUNT_PROFILE_URL=''
 SITE_NAME=''
 MARKETING_SITE_BASE_URL=''
 SUPPORT_URL=''
