--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@edx/frontend-component-footer": "12.2.0",
     "@edx/frontend-component-header": "4.6.0",
     "@edx/frontend-platform": "5.5.4",
-    "@edx/paragon": "20.45.0",
+    "@openedx/paragon": "21.11.3",
     "@edx/react-unit-test-utils": "1.7.0",
     "@edx/reactifex": "^2.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
@@ -68,7 +68,7 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-build": "13.0.1",
+    "@openedx/frontend-build": "13.0.19",
     "@testing-library/react": "12.1.5",
     "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
     "axios": "0.21.2",
