--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@edx/frontend-component-footer": "12.2.0",
     "@edx/frontend-component-header": "4.6.0",
     "@edx/frontend-platform": "5.5.4",
+    "@edx/openedx-atlas": "^0.6.0",
     "@edx/paragon": "20.45.0",
     "@edx/react-unit-test-utils": "1.7.1",
     "@edx/reactifex": "^2.1.1",
