--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@^1.2.2",
-    "@edx/frontend-component-footer": "12.6.0",
-    "@edx/frontend-component-header": "4.10.1",
-    "@edx/frontend-platform": "6.1.1",
-    "@edx/paragon": "^21.5.6",
-    "@edx/react-unit-test-utils": "1.7.0",
+    "@edx/frontend-component-footer": "13.0.2",
+    "@edx/frontend-component-header": "5.0.2",
+    "@edx/frontend-platform": "7.1.0",
+    "@edx/paragon": "21.5.6",
+    "@edx/react-unit-test-utils": "2.0.0",
     "@edx/reactifex": "^2.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -68,7 +68,7 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-build": "13.0.8",
+    "@edx/frontend-build": "13.0.14",
     "@testing-library/react": "12.1.5",
     "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
     "axios": "0.21.2",
