--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@^1.2.2",
-    "@edx/frontend-component-footer": "12.2.0",
-    "@edx/frontend-component-header": "4.6.0",
-    "@edx/frontend-platform": "5.5.4",
+    "@edx/frontend-component-footer": "^13.0.2",
+    "@edx/frontend-component-header": "^5.0.2",
+    "@edx/frontend-platform": "^7.1.0",
     "@edx/openedx-atlas": "^0.6.0",
-    "@edx/paragon": "20.45.0",
-    "@edx/react-unit-test-utils": "1.7.1",
+    "@edx/react-unit-test-utils": "^2.0.0",
+    "@openedx/paragon": "^22.1.1",
     "@edx/reactifex": "^2.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -67,7 +67,7 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-build": "13.0.1",
+    "@openedx/frontend-build": "^13.0.28",
     "@testing-library/react": "12.1.5",
     "axios": "0.21.2",
     "axios-mock-adapter": "^1.17.0",
